objects/ccrz__E_PriceGroupAccount__c.object
<CustomObject>
    <description>Junction between Price Group and Account</description>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <description>Lookup to related Account object.</description>
        <inlineHelpText>Lookup to related Account object.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Price Group Accounts</relationshipLabel>
        <relationshipName>PriceGroupAccounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveEnd__c</fullName>
        <defaultValue>DATETIMEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>Date and Time at which this entry is expires</description>
        <inlineHelpText>Date and Time at which this entry is expires</inlineHelpText>
        <label>Effective End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveStart__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date at which this entry is takes effect</description>
        <inlineHelpText>Date at which this entry is takes effect</inlineHelpText>
        <label>Effective Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the entry is available.</description>
        <inlineHelpText>Determines if the entry is available.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PriceGroupAccountID__c</fullName>
        <description>External ID field</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID field</inlineHelpText>
        <label>Price Group Account ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__PriceGroup__c</fullName>
        <description>Mapping to the Price group associated with this entry.</description>
        <inlineHelpText>Mapping to the Price group associated with this entry.</inlineHelpText>
        <label>CC Price Group</label>
        <referenceTo>ccrz__E_PriceGroup__c</referenceTo>
        <relationshipLabel>CC Price Group Accounts</relationshipLabel>
        <relationshipName>PriceGroupAccounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Ordering of the price groups for an account</description>
        <inlineHelpText>Ordering of the price groups for an account</inlineHelpText>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>Storefront to which this association applies.</description>
        <inlineHelpText>Storefront to which this association applies.</inlineHelpText>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Price Group Account</label>
    <nameField>
        <displayFormat>PGA-{0000000000}</displayFormat>
        <label>CC Price Group Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price Group Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>